// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/navbar should have a default behaviour 1`] = `
<div
  className={
    Object {
      "data-css-1o4ayhl": "",
    }
  }
  style={Object {}}
>
  <div
    className={
      Object {
        "data-css-11xpg4p": "",
      }
    }
  >
    react-workbench
  </div>
</div>
`;

exports[`component/navbar should take custom className 1`] = `
<div
  className={
    Object {
      "data-css-kdimgl": "",
    }
  }
  style={Object {}}
>
  <div
    className={
      Object {
        "data-css-11xpg4p": "",
      }
    }
  >
    react-workbench
  </div>
</div>
`;

exports[`component/navbar should take custom style 1`] = `
<div
  className={
    Object {
      "data-css-1o4ayhl": "",
    }
  }
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div
    className={
      Object {
        "data-css-11xpg4p": "",
      }
    }
  >
    react-workbench
  </div>
</div>
`;
